@@ -85,5 +85,4 @@ public abstract class CommonPlatformTest extends TestCase {
 		platform.stop();
 		assertNull(platform.getBundleContext());
 	}
-
 }
