@@ -25,7 +25,7 @@ Package org.springframework.osgi.extender
 * added support for install.context.error.handler property
 * changed namespace handlers lifecycle to depend on bundle events STARTED/STOPPED instead of RESOLVED/UNRESOLVED
 
-Package org.springframework.osgi.extender
+Package org.springframework.osgi.io
 * improved OsgiBundleResource#getFile() file detection method
 * eliminated existance check on resolved files for OsgiBundleResource#getFile()
 
@@ -33,6 +33,7 @@ Package org.springframework.osgi.service
 * removed deprecated retryTimes parameter in OsgiServiceProxyFactoryBean
 * improved type filtering for tracked services
 * fixed visibility issue when invoking non-public proxied methods 
+* improved waiting code to deal with spurious or accidental wakeups
 
 Package org.springframework.osgi.service
 * improved FelixOsgiPlatform to support API changes in Felix 1.4.x
